customize git workflow customize git ignore

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,30 +14,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# nbdev + fastai + wandb + kaggle \n",
     "\n",
-    "> Summary description here."
+    "> This repo shows how to setup a project for a kaggle competition using nbdev, fastai and wandb.  As an example we used the classical [Dogs vs Cats](https://www.kaggle.com/c/dogs-vs-cats-redux-kernels-edition) competition "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "## Steps\n",
+    "1. fork nbdev_template project (fastai/nbdev_template)\n",
+    "`gh repo fork https://github.com/fastai/nbdev_template.git --clone`\n",
+    "1. change settings.ini\n",
+    "1. set GITHUB_TOKEN with a [personal access token](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token)\n",
+    "💥 danger: check if .environment is in .gitignore.  Do not publish your .environment file.\n",
+    "1. In the root directory:\n",
+    "`nbdev_new`\n",
+    "`nbdev_install_git_hooks`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`pip install your_project_name`"
+    "## Notebooks\n",
+    "[] 00_setup.ipynb\n",
+    "[] 01_eda.ipynb\n",
+    "[] 02_train.ipynb\n",
+    "[] 03_analyse.ipynb\n",
+    "[] 04_submit.ipynb"
    ]
   },
   {
@@ -84,8 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   }
  },
