--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -39,11 +39,11 @@
    "metadata": {},
    "source": [
     "## Notebooks\n",
-    "[] 00_setup.ipynb\n",
-    "[] 01_eda.ipynb\n",
-    "[] 02_train.ipynb\n",
-    "[] 03_analyse.ipynb\n",
-    "[] 04_submit.ipynb"
+    "- [] 00_setup.ipynb\n",
+    "- [] 01_eda.ipynb\n",
+    "- [] 02_train.ipynb\n",
+    "- [] 03_analyse.ipynb\n",
+    "- [] 04_submit.ipynb"
    ]
   },
   {
