--- a/nbs/00_setup.ipynb
+++ b/nbs/00_setup.ipynb
@@ -13,8 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup functions\n",
-    "> setup details here."
+    "# Setup functions"
    ]
   },
   {
@@ -28,6 +27,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup functions\n",
+    "> get_kaggle_dataset(competition)\n",
+    "> pathFromCompetition(competition)\n",
+    "> download_and_log(competition)\n",
+    "> setup(competition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,7 +50,8 @@
    "source": [
     "# !pip install -Uqq kaggle\n",
     "# !pip install -Uqq wandb\n",
-    "# !pip install -Uqq python-dotenv"
+    "# !pip install -Uqq python-dotenv\n",
+    "# !pip install -Uqq pytest"
    ]
   },
   {
@@ -44,16 +60,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.all import *\n",
-    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
-    "import wandb\n",
+    "# export\n",
     "from dotenv import load_dotenv\n",
+    "# https://technowhisp.com/kaggle-api-python-documentation/\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "from fastai.vision.all import *\n",
+    "import wandb\n",
     "import os\n",
-    "from tqdm import tqdm\n",
-    "\n",
+    "import pytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "load_dotenv()\n",
     "k = KaggleApi()\n",
     "k.authenticate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data from Kaggle\n",
+    "> Download any competition dataset and extract to expected fastai folder.  Uses fastai config to find out where to extract the dataset locally."
    ]
   },
   {
@@ -64,13 +97,22 @@
    "source": [
     "#export \n",
     "def get_kaggle_dataset(competition):\n",
-    "    'download and extract kaggle competition dataset to fastai data folder'\n",
+    "    \"\"\" Download and extract kaggle competition dataset to fastai data folder and return path to files.\n",
+    "    get_kaggle_dataset(string) -> Path\n",
+    "    args:\n",
+    "        competition: string containing competition name in Kaggle\n",
+    "    returns:\n",
+    "        path to local competition data\"\"\"\n",
     "    config = Config()\n",
     "    zipdest = Path(config.d['archive_path'])\n",
     "    zipname = Path(config.d['archive_path']+'/'+competition+'.zip')\n",
     "    if not zipname.exists():\n",
-    "        print (f'${zipname} does not exist. Downloading...')\n",
-    "        k.competition_download_files(competition, path=zipdest) \n",
+    "        print (f'${zipname} does not exist.')\n",
+    "        try:\n",
+    "            k.competition_download_files(competition, path=zipdest)\n",
+    "        except:\n",
+    "            raise Exception(f'No competition {competition} found at Kaggle.')\n",
+    "    print('Downloading....')\n",
     "    dest = Path(config.d['data_path']+'/'+competition+'/')\n",
     "    if not dest.exists():\n",
     "        print (f'${dest} does not exist.  Extracting...')\n",
@@ -82,6 +124,26 @@
     "                file_extract(dest/f)\n",
     "                os.remove(dest/f)\n",
     "    return dest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$/home/fredguth/.fastai/archive/blah.zip does not exist.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pytest\n",
+    "with pytest.raises(Exception) as e_info:\n",
+    "    get_kaggle_dataset('blah')\n",
+    "assert \"Exception\" in str(e_info)"
    ]
   },
   {
@@ -108,21 +170,53 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Path('/home/fredguth/.fastai/data/dogs-vs-cats-redux-kernels-edition')"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p = get_kaggle_dataset('dogs-vs-cats-redux-kernels-edition')\n",
-    "p"
+    "#p = get_kaggle_dataset('dogs-vs-cats-redux-kernels-edition')\n",
+    "#p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "def pathFromCompetition(competition):\n",
+    "    \"\"\"Returns path to local competition files.\n",
+    "    args:\n",
+    "    competition: string containing name of competition\"\"\"\n",
+    "    config = Config()\n",
+    "    ret =  Path(config.d['data_path']+'/'+competition+'/')\n",
+    "    if not ret.exists(): raise Exception('Please download the competition data first.')\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confirm(msg=\"\"):\n",
+    "    \"\"\"\n",
+    "    Ask user to enter Y or N (case-insensitive).\n",
+    "    :return: True if the answer is Y.\n",
+    "    :rtype: bool\n",
+    "    \"\"\"\n",
+    "    answer = \"\"\n",
+    "    if not msg: msg = \"OK to continue\"\n",
+    "    while answer not in [\"y\", \"n\"]:\n",
+    "        answer = input(msg+\" [Y/N]? \").lower()\n",
+    "    return answer == \"y\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data from Kaggle and log at WandB\n"
    ]
   },
   {
@@ -133,6 +227,21 @@
    "source": [
     "# export\n",
     "def download_and_log(competition):\n",
+    "    \"\"\" Start a Run for data download at WandB, download competition data and log data reference in local machine as an Artifact at WandB.\n",
+    "    args:\n",
+    "        competition: string containing competition name\n",
+    "    returns:\n",
+    "        Path to competition data\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        p = pathFromCompetition(competition)\n",
+    "        if not confirm(f'Data for competition found at {p}\\n Force new download '): return p\n",
+    "    except: pass\n",
+    "    try:\n",
+    "        k.competition_list_files(competition)\n",
+    "    except:\n",
+    "        print (f'No competition {competition} found at Kaggle.')\n",
+    "        return None\n",
     "    # 🚀 start a run, with a type to label it and a project it can call home\n",
     "    with wandb.init(project=competition, job_type=\"download-data\") as run:\n",
     "        path = get_kaggle_dataset(competition)\n",
@@ -149,7 +258,8 @@
     "                    raw_data.add_reference('file://'+str(f))\n",
     "        raw_data.metadata['sizes']=sizes\n",
     "        # ✍️ Save the artifact to W&B.\n",
-    "        run.log_artifact(raw_data)"
+    "        run.log_artifact(raw_data)\n",
+    "        return path"
    ]
   },
   {
@@ -158,124 +268,80 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfredguth\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+      "No competition blah found at Kaggle.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                Tracking run with wandb version 0.10.33<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">zesty-glitter-1</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition\" target=\"_blank\">https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition/runs/x6qq1egk\" target=\"_blank\">https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition/runs/x6qq1egk</a><br/>\n",
-       "                Run data is saved locally in <code>/home/fredguth/kaggle/dogscats/nbs/wandb/run-20210703_000748-x6qq1egk</code><br/><br/>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 12500/12500 [00:03<00:00, 4037.25it/s]\n",
-      "100%|██████████| 25000/25000 [00:06<00:00, 4070.46it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 207355<br/>Program ended successfully."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9b5a9801ae14010ae3359ce022a3729",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find user logs for this run at: <code>/home/fredguth/kaggle/dogscats/nbs/wandb/run-20210703_000748-x6qq1egk/logs/debug.log</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find internal logs for this run at: <code>/home/fredguth/kaggle/dogscats/nbs/wandb/run-20210703_000748-x6qq1egk/logs/debug-internal.log</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                    <br/>Synced <strong style=\"color:#cdcd00\">zesty-glitter-1</strong>: <a href=\"https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition/runs/x6qq1egk\" target=\"_blank\">https://wandb.ai/fredguth/dogs-vs-cats-redux-kernels-edition/runs/x6qq1egk</a><br/>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "download_and_log('dogs-vs-cats-redux-kernels-edition')"
+    "download_and_log('blah')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup(competition):\n",
+    "    \"\"\" Returns Path to local competition files, download and log data if needed.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        k.competition_list_files(competition)\n",
+    "    except:\n",
+    "        print (f'No competition {competition} found.')\n",
+    "        return None\n",
+    "    try:\n",
+    "        p = pathFromCompetition(competition)\n",
+    "    except:\n",
+    "        if not confirm(f'Download data for {competition} '): return None\n",
+    "        return download_and_log(competition)\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No competition dogs found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "setup('dogs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/fredguth/.fastai/data/dogs-vs-cats-redux-kernels-edition')"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setup('dogs-vs-cats-redux-kernels-edition')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.9.0 64-bit ('infod': conda)",
    "name": "python3"
   }
  },
