--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "#from your_lib.core import *"
    ]
   },
   {
@@ -24,14 +24,20 @@
    "metadata": {},
    "source": [
     "## Steps\n",
-    "1. fork nbdev_template project (fastai/nbdev_template)\n",
+    "1) Fork nbdev_template project (fastai/nbdev_template)\n",
+    "\n",
     "`gh repo fork https://github.com/fastai/nbdev_template.git --clone`\n",
-    "1. change settings.ini\n",
-    "1. set GITHUB_TOKEN with a [personal access token](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token)\n",
-    "💥 danger: check if .environment is in .gitignore.  Do not publish your .environment file.\n",
-    "1. In the root directory:\n",
+    "\n",
+    "2) Change settings.ini\n",
+    "\n",
+    "3) set .env\n",
+    "\n",
+    "💥 danger: check if .env is in .gitignore.  Do not publish your .environment file.\n",
+    "\n",
+    "4) In the root directory:\n",
     "`nbdev_new`\n",
-    "`nbdev_install_git_hooks`"
+    "\n",
+    "`nbdev_install_git_hooks`\n"
    ]
   },
   {
@@ -64,18 +70,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1+1"
    ]
@@ -90,7 +85,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.9.0 64-bit ('infod': conda)",
    "name": "python3"
   }
  },
