fix lib nfwk import from any notebook

--- a/nbs/00_setup.ipynb
+++ b/nbs/00_setup.ipynb
@@ -285,6 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def setup(competition):\n",
     "    \"\"\" Returns Path to local competition files, download and log data if needed.\n",
     "    \"\"\"\n",
