added others folder and solutions

--- a/nbs/00_setup.ipynb
+++ b/nbs/00_setup.ipynb
@@ -111,7 +111,7 @@
     "            k.competition_download_files(competition, path=zipdest)\n",
     "        except:\n",
     "            raise Exception(f'No competition {competition} found at Kaggle.')\n",
-    "    print('Downloading....')    \n",
+    "    print('Downloading....')\n",
     "    dest = Path(config.d['data_path']+'/'+competition+'/')\n",
     "    if not dest.exists():\n",
     "        print (f'${dest} does not exist.  Extracting...')\n",
@@ -189,8 +189,7 @@
     "    config = Config()\n",
     "    ret =  Path(config.d['data_path']+'/'+competition+'/')\n",
     "    if not ret.exists(): raise Exception('Please download the competition data first.')\n",
-    "    return ret\n",
-    "        "
+    "    return ret"
    ]
   },
   {
@@ -233,13 +232,13 @@
     "    returns:\n",
     "        Path to competition data\n",
     "    \"\"\"\n",
-    "    try: \n",
+    "    try:\n",
     "        p = pathFromCompetition(competition)\n",
     "        if not confirm(f'Data for competition found at {p}\\n Force new download '): return p\n",
     "    except: pass\n",
-    "    try: \n",
+    "    try:\n",
     "        k.competition_list_files(competition)\n",
-    "    except:    \n",
+    "    except:\n",
     "        print (f'No competition {competition} found at Kaggle.')\n",
     "        return None\n",
     "    # 🚀 start a run, with a type to label it and a project it can call home\n",
@@ -289,6 +288,9 @@
     "def setup(competition):\n",
     "    \"\"\" Returns Path to local competition files, download and log data if needed.\n",
     "    \"\"\"\n",
+    "    load_dotenv()\n",
+    "    k = KaggleApi()\n",
+    "    k.authenticate()\n",
     "    try:\n",
     "        k.competition_list_files(competition)\n",
     "    except:\n",
@@ -342,7 +344,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit ('infod': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   }
  },
